--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,7 +1,8 @@
 h2 Sign up
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f|
   = f.error_notification
-  = f.input :name, :autofocus => true
+  = f.input :first_name, :autofocus => true
+  = f.input :last_name
   = f.input :email, :required => true
   = f.input :password, :required => true
   = f.input :password_confirmation, :required => true
