--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,14 @@
-doctype
+doctype html
 html
   head
     meta content="width=(device-width,)initial-scale=1.0" name="viewport"
       title= content_for?(:title) ? yield(:title) : "Geoauth"
-      meta content=(content_for?(:description) ? yield(:description) :)"Geoauth" name="description"
+      meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
         = stylesheet_link_tag "application", :media => "all"
         = javascript_include_tag "application"
         = csrf_meta_tags
         = yield(:head)
-  body{:class => "#{controller_name} # action_name}"
+  body
     header.navbar.navbar-fixed-top
       nav.navbar-inner
         .container
