Ajout roles et admin users.

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -3,7 +3,6 @@
 
   .form-inputs
     = f.input :name
-    = f.input :description
+    = f.input :description, as: :text
 
-  .form-actions
-    = f.button :submit
+  = f.button :wrapped, :cancel => groups_path
