--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -6,11 +6,11 @@
     %th
     %th
 
-  - @admin_users.each do |admin_user|
+  - @users.each do |user|
     %tr
-      %td= link_to 'Show', admin_user
-      %td= link_to 'Edit', edit_admin_user_path(admin_user)
-      %td= link_to 'Destroy', admin_user, method: :delete, data: { confirm: 'Are you sure?' }
+      %td= link_to 'Show', user
+      %td= link_to 'Edit', edit_admin_user_path(user)
+      %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
