--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,7 +1,4 @@
-%h1 Editing admin_user
+%h1 Editing User
 
 = render 'form'
 
-= link_to 'Show', @admin_user
-\|
-= link_to 'Back', admin_users_path
