--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,17 +1,27 @@
-%h1 Listing admin_users
+h1 Listing admin_users
 
-%table
-  %tr
-    %th
-    %th
-    %th
+table
+  thead
+    tr
+      th
+        #
+      th
+        'Email
+      th
+        'Name
 
-  - @users.each do |user|
-    %tr
-      %td= link_to 'Show', user
-      %td= link_to 'Edit', edit_admin_user_path(user)
-      %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
+  tbody
+    - @users.each do |user|
+      tr
+        td
+          = user.id
+        td
+          = user.full_name
+        td
+          = link_to 'Show', admin_user_path(user)
+          = link_to 'Edit', edit_admin_user_path(user)
+          = link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }
 
-%br
+br
 
-= link_to 'New User', new_admin_user_path
+= link_to 'New User', new_admin_user_path, class: 'btn btn-primary'
