--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -7,6 +7,8 @@
   %b Description:
   = @group.description
 
+- if @group.members.any?
+  = render partial: 'shared/users_list', locals: { users: @group.members }
 = link_to 'Edit', edit_group_path(@group)
 \|
 = link_to 'Back', groups_path
