--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,25 +1,31 @@
-doctype html
+doctype 5
 html
   head
+    meta charset="utf-8"
     meta content="width=(device-width,)initial-scale=1.0" name="viewport"
-      title= content_for?(:title) ? yield(:title) : "Geoauth"
-      meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
-        = stylesheet_link_tag "application", :media => "all"
-        = javascript_include_tag "application"
-        = csrf_meta_tags
-        = yield(:head)
-  body
-    header.navbar.navbar-fixed-top
-      nav.navbar-inner
-        .container
-          = render 'layouts/navigation'
-    #main role="main"
+    meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
+    title= content_for?(:title) ? yield(:title) : "Geoauth"
+    meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
+    = stylesheet_link_tag "application", :media => "all"
+    = csrf_meta_tags
+    = yield(:head)
+  body.flat
+    #wrap
+      header.navbar.navbar-inverse.navbar-fixed-top
+        nav.navbar-inner
+          .container
+            = render 'layouts/navigation'
+      #main role="main"
+        .container.flat-container
+          .content
+            .row
+              .span12
+                = render 'layouts/messages'
+                = yield
+        /! ! end of .container
+        #push
+      /! ! end of #main
+    footer
       .container
-        .content
-          .row
-            .span12
-              = render 'layouts/messages'
-              = yield
-          footer
-      /! ! end of .container
-    /! ! end of #main
+  = javascript_include_tag "application"
+  = yield :javascripts
