Correction UI pour groups et roles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,8 @@
  *= require_self
  *= require_tree ./all
  *= require ./components/components
+ *= require font-awesome
+ *= require dataTables/jquery.dataTables.bootstrap
 */
 
 
