--- a/app/assets/stylesheets/login/login.css.sass
+++ b/app/assets/stylesheets/login/login.css.sass
@@ -3,11 +3,20 @@
 body
   background-color: #f1f1f1
 
-div.form-login
+.login-wrapper
+  width: 522px
+  margin: 0 auto
+
+  .messages
+    position: absolute
+    top: 60px
+    width: 522px
+
+div.devise-form
   background-color: #fff
   border: 1px solid #d4d4d4
   width: 460px
-  margin: 100px auto 20px auto
+  margin: 100px auto 0px auto
   padding: 30px
   @include border-radius(8px)
   @include box-shadow(#{0 1px 8px rgba(0,0,0,.15)})
@@ -25,7 +34,7 @@ div.form-login
     border-left: 1px solid #ddd
     display: inline-block
     margin-left: 30px
-    padding-left: 30px
+    padding: 20px 0 0 30px
     text-align: left
     width: 230px
     height: 250px
@@ -38,13 +47,15 @@ div.form-login
   text-align: center
   font-size: 12px
   line-height: 14px
-  padding-top: 1.5em
+  padding-top: 0
+  text-align: center
 
   ul.links
+    float: left
     list-style-type: none
-    text-align: center
-    margin: 0
+    margin: 0 auto
     padding: 0.5em 0
+    width: 100%
     
     li
       display: inline
