--- a/app/views/admin/groups/index.html.slim
+++ b/app/views/admin/groups/index.html.slim
@@ -7,16 +7,20 @@ table.table.table-striped
       th Name
       th Description
       th
-      th
 
   tbody
     - @groups.each do |group|
       tr
         td= "##{group.id}"
-        td= link_to group.name, admin_group_path(group)
+        td
+          = link_to group.name, admin_group_path(group)
+          |  
+          = "(#{group.members.count})"
         td= group.description
-        td= link_to 'Edit', edit_admin_group_path(group)
-        td= link_to 'Destroy', admin_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }
+        td
+          = link_to 'Edit', edit_admin_group_path(group), class: 'btn btn-mini btn-primary'
+          |  
+          = link_to 'Destroy', admin_group_path(group), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-mini btn-danger'
 
 br
 
