--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -2,6 +2,9 @@
   = f.error_notification
 
   fieldset
+    legend
+      i.icon-user
+      '&nbsp;New User
     .form-inputs.row
       = f.input :email, autofocus: true, required: true
       = f.input :username, hint: 'Leave blank to use email', input_html: { autocomplete: 'off' }
@@ -16,14 +19,15 @@
   - unless @user.new_record?
     fieldset
       legend
-        i.icon-camera
+        i.icon-share
+        '&nbsp;Roles
         Roles
       = f.association :roles, label: '', as: :check_boxes
 
     fieldset
       legend
-        i.icon-camera
-        Groups
+        i.icon-group
+        '&nbsp;Groups
       = f.association :groups, label: '', as: :check_boxes
 
   = f.button :wrapped, cancel: admin_users_path
