--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,30 +1,18 @@
 .page-header
   h1 Listing Users
 
-table.table.table-stripped
+table#users.table.table-striped.table-bordered data-source="#{admin_users_url(format: 'json')}" cellpadding=0 cellspacing=0 border=0
   thead
     tr
       th
-        #
+        | #
       th
-        'Email
+        | Email
       th
-        'Name
-
+        | Name
+      th 
+        | &nbsp;
   tbody
-    - @users.each do |user|
-      tr
-        td
-          = "##{user.id}"
-        td
-          = link_to user.email, edit_admin_user_path(user)
-        td
-          = user.full_name
-        td
-          = link_to 'Show', admin_user_path(user)
-          = link_to 'Edit', edit_admin_user_path(user)
-          = link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }
-
 br
 
 = link_to 'New User', new_admin_user_path, class: 'btn btn-primary'
