--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,10 +1,20 @@
-h2 Sign up
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f|
-  = f.error_notification
-  = f.input :first_name, :autofocus => true
-  = f.input :last_name
-  = f.input :email, :required => true
-  = f.input :password, :required => true
-  = f.input :password_confirmation, :required => true
-  = f.button :submit, 'Sign up', :class => 'btn-primary'
-= render "devise/shared/links"
+= devise_error_messages!
+.devise-form.signup
+  .form-signup
+    = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-horizontal' }) do |f|
+      = f.error_notification
+      fieldset
+        legend
+          i.icon-user
+          |  About you
+      = f.input :first_name, :autofocus => true
+      = f.input :last_name
+      = f.input :email, :required => true
+      = f.input :password, :required => true
+      = f.input :password_confirmation, :required => true
+      .form-actions
+        = f.button :submit, 'Sign up', :class => 'btn-primary'
+  .hero-unit
+    | Inscription obligatoire pour b&eacute;n&eacute;ficier de tous les avantages de la plateforme.
+.login-footer
+  = render "devise/shared/links"
