--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,14 +1,54 @@
-= link_to "Geoauth", root_path, :class => 'brand'
-ul.nav
+= link_to root_path, :class => 'brand' do
+  i.icon-home.icon-2.icon-white
+  '&nbsp;Geoauth
+.nav-collapse.collapse
   - if user_signed_in?
-    li
-      = link_to 'Logout', destroy_user_session_path, :method=>'delete'
+    ul.nav
+      li.dropdown
+        = link_to 'Manage Users', '#', data: { toggle: 'dropdown' }, class: 'dropdown-toggle'
+        ul.dropdown-menu role="menu"
+          li
+            = link_to admin_users_path do
+              i.icon-user.icon-white
+              '&nbsp;Users
+          li
+            = link_to admin_groups_path do
+              i.icon-group.icon-white
+              '&nbsp;Groups
+          li
+            = link_to admin_roles_path do
+              i.icon-check.icon-white
+              |  Roles
+    ul.nav
+      li.dropdown
+        = link_to 'Applications', '#', data: { toggle: 'dropdown' }, class: 'dropdown-toggle'
+        ul.dropdown-menu role="menu"
+          li
+            = link_to '/geoserver/web/' do
+              i.icon-globe
+              '&nbsp;Geoserver
+          li
+            = link_to '/geonetwork/' do
+              i.icon-folder-close
+              '&nbsp;Geonetwork
+    ul.nav.pull-right
+      li.dropdown.account-box
+        = link_to '#', { class: 'pic dropdown-toggle', 'data-toggle' => 'dropdown' } do
+          = image_tag avatar_url(current_user)
+        ul.dropdown-menu role="menu"
+          li
+            = link_to edit_user_registration_path do
+              i.icon-user
+              'Edit profile
+          li
+            = link_to destroy_user_session_path, :method => :get do
+              i.icon-signout
+              'Logout
   - else
-    li
-      = link_to 'Login', new_user_session_path
-  - if user_signed_in?
-    li
-      = link_to 'Edit account', edit_user_registration_path
-  - else
-    li
-      = link_to 'Sign up', new_user_registration_path
+    ul.nav
+      li
+        = link_to 'Login', new_user_session_path
+  ul.nav.pull-right
+    - unless user_signed_in?
+      li
+        = link_to 'Sign up', new_user_registration_path
