--- a/app/views/layouts/login.html.slim
+++ b/app/views/layouts/login.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    meta content="width=(device-width,)initial-scale=1.0" name="viewport"
+    meta content="width=device-width" name="viewport"
       title= content_for?(:title) ? yield(:title) : "Geoauth"
       meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
         = stylesheet_link_tag "application-login", :media => "all"
