--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     meta charset="utf-8"
-    meta content="width=(device-width,)initial-scale=1.0" name="viewport"
+    meta content="width=device-width" name="viewport"
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
     title= content_for?(:title) ? yield(:title) : "Geoauth"
     meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
