reorganisation des stylesheets et correction de quelques elements de design

--- a/app/assets/stylesheets/components/navbar.css.scss
+++ b/app/assets/stylesheets/components/navbar.css.scss
@@ -1,3 +1,17 @@
+.navbar .nav > li > a {
+  text-shadow: none;
+  &.brand {
+    padding-top: 8px;
+  }
+  &.brand-context {
+    margin-top: 4px;
+  }
+}
+
+.navbar .nav > li {
+  line-height: 30px;
+}
+
 .navbar.backend {
   .container {
     width: 1000px;
