--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,6 +1,7 @@
 = link_to root_path, :class => 'brand' do
-  i.icon-home.icon-2.icon-white
-  '&nbsp;Geoauth
+  |Geo
+  i.icon-lock style="margin: 0 1px;"
+  |uth
 .nav-collapse.collapse
   - if user_signed_in?
     ul.nav
