--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,13 +6,13 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
     title= content_for?(:title) ? yield(:title) : "Geoauth"
     meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
-    = stylesheet_link_tag "application", :media => "all"
+    = stylesheet_link_tag :application, :media => "all"
     = csrf_meta_tags
     = yield(:head)
   body.xflat
     #wrap
-      header.navbar.navbar-inverse.navbar-fixed-top
-        nav.navbar-inner
+      header.navbar.navbar-inverse.backend
+        .navbar-inner
           .container
             = render 'layouts/navigation'
       #main role="main"
