--- a/app/assets/stylesheets/base/layouts.css.scss
+++ b/app/assets/stylesheets/base/layouts.css.scss
@@ -6,10 +6,16 @@ html, html {
 }
 
 body {
-  background-color: white;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   height: 100%;
+  color: #333;
 }
 
+h1 {
+  font: 300 40px/23px "lato";
+  letter-spacing: -2px;
+  text-transform: uppercase;
+}
 .shadow-container {
   @include box-shadow(rgba(0, 0, 0, 0.1) 0px 0 20px 10px);
   padding: 20px;
