--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,8 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
     title= content_for?(:title) ? yield(:title) : "Geoauth"
     meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans", :media => "all"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Lato:100,900"
     = stylesheet_link_tag :application, :media => "all"
     = csrf_meta_tags
     = yield(:head)
