--- a/app/views/admin/groups/_form.html.slim
+++ b/app/views/admin/groups/_form.html.slim
@@ -1,8 +1,8 @@
-= simple_form_for([:admin, @group]) do |f|
+= simple_form_for([:admin, @group], defaults: { input_html: { class: 'm-wrap input-block-level' } }) do |f|
   = f.error_notification
 
   .form-inputs
-    = f.input :name, input_html: { class: 'span6' }
-    = f.input :description, as: :text, input_html: { class: 'span6' }
+    = f.input :name
+    = f.input :description, as: :text, input_html: { rows: 5 }
 
   = f.button :wrapped, :cancel => admin_groups_path
