--- a/app/views/admin/groups/show.html.slim
+++ b/app/views/admin/groups/show.html.slim
@@ -1,20 +1,15 @@
 p#notice= notice
-
-table.table
-  tbody
-    tr
-      td
-        b Name:
-      td
-        = @group.name
-    tr
-      td
-        b Description:
-      td
-        = @group.description
+.page-header
+  h1= "Group :  #{@group.name}"
+b Description :
+p= @group.description
 
 - if @members.any?
+  .page-header
+    h2 Users list
   = render partial: 'admin/shared/users_list', locals: { users: @members }
-= link_to 'edit', edit_admin_group_path(@group), class: 'btn btn-primary'
-|  or 
-= link_to 'back', admin_groups_path
+
+.form-actions
+  = link_to 'Edit', edit_admin_group_path(@group), class: 'm-btn blue'
+  |  or 
+  = link_to 'back', admin_groups_path
