--- a/app/views/admin/shared/_users_list.html.slim
+++ b/app/views/admin/shared/_users_list.html.slim
@@ -20,8 +20,8 @@ table#users_list.table.table-stripped
         td
           = user.full_name
         td
-          = link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-mini btn-primary'
+          = link_to 'Edit', edit_admin_user_path(user), class: 'm-btn mini blue-stripe'
           |  
-          = link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-mini btn-danger'
+          = link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: 'm-btn mini red-stripe'
 
 = paginate users
