--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -1,33 +1,27 @@
-= simple_form_for([ :admin, @user ], :html => { :class => 'form-horizontal' }) do |f|
+= simple_form_for([ :admin, @user ], defaults: { input_html: { class: 'm-wrap m-ctrl-large' } }) do |f|
   = f.error_notification
-
-  fieldset
-    legend
-      i.icon-user
-      '&nbsp;New User
-    .form-inputs.row
-      = f.input :email, autofocus: true, required: true
-      = f.input :username, hint: 'Leave blank to use email', input_html: { autocomplete: 'off' }
-      = f.input :password, hint: "leave it blank if you don't want to change it", required: false, input_html: { autocomplete: 'off' }
-      = f.input :password_confirmation
-      = f.input :enabled, as: :boolean
-  fieldset
-    .form-inputs.row
-      = f.input :first_name
-      = f.input :last_name
-
+  .page-header
+    h1 User informations
+  .row
+    fieldset.span6
+      .form-inputs
+        = f.input :email, autofocus: true, required: true
+        = f.input :username, hint: 'Leave blank to use email', input_html: { autocomplete: 'off' }
+        = f.input :password, hint: "leave it blank if you don't want to change it", required: false, input_html: { autocomplete: 'off' }
+        = f.input :password_confirmation
+        = f.input :enabled, as: :boolean
+    fieldset.span6
+      .form-inputs
+        = f.input :first_name
+        = f.input :last_name
   - unless @user.new_record?
-    fieldset
-      legend
-        i.icon-share
-        '&nbsp;Roles
-        Roles
-      = f.association :roles, label: '', as: :check_boxes
+    .page-header
+      h1 Roles
+    = f.association :roles, label: '', as: :check_boxes, input_html: { class: "" }
 
-    fieldset
-      legend
-        i.icon-group
-        '&nbsp;Groups
-      = f.association :groups, label: '', as: :check_boxes
+    .page-header
+      h1 Groups
+    
+    = f.association :groups, label: '', as: :check_boxes, input_html: { class: "" }
 
   = f.button :wrapped, cancel: admin_users_path
