--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,7 +1,7 @@
 .page-header
   h1 Listing Users
 
-table#users.table.table-striped.table-bordered data-source="#{admin_users_url(format: 'json')}" cellpadding=0 cellspacing=0 border=0
+table#users.table.table-striped data-source="#{admin_users_url(format: 'json')}" cellpadding=0 cellspacing=0 border=0
   thead
     tr
       th
@@ -15,4 +15,4 @@ table#users.table.table-striped.table-bordered data-source="#{admin_users_url(fo
   tbody
 br
 
-= link_to 'New User', new_admin_user_path, class: 'btn btn-primary'
+= link_to 'New User', new_admin_user_path, class: 'm-btn blue'
