--- a/app/assets/stylesheets/base/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/base/bootstrap_overrides.css.scss
@@ -1,2 +1,18 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
+
+.hero-unit {
+  @include border-radius(0px);
+}
+
+.form-actions {
+  border: none;
+  background-color: $grey;
+  padding: {
+    top: 5px;
+    bottom: 15px;
+  }
+  &.nopadding {
+    padding-left: 15px;
+  }
+}
