--- a/app/assets/stylesheets/base/layouts.css.scss
+++ b/app/assets/stylesheets/base/layouts.css.scss
@@ -1,5 +1,3 @@
-$nice_red: #c74451;
-
 html, html {
   -webkit-font-smoothing: subpixel-antialiased;
   height: 100%;
@@ -9,6 +7,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   height: 100%;
   color: #333;
+  background-color: $grey;
 }
 
 .shadow-container {
@@ -17,7 +16,6 @@ body {
 }
 
 body.flat {
-  background-color: #f5f4ef;
   padding-top: 60px;
 }
 
