--- a/app/assets/stylesheets/components/forms.css.scss
+++ b/app/assets/stylesheets/components/forms.css.scss
@@ -1,6 +1,3 @@
-body {
-  background-color: #f1f1f1; }
-
 .login-wrapper {
   width: 522px;
   margin: 0 auto;
@@ -11,17 +8,15 @@ body {
 
 div.devise-form {
   background-color: white;
-  border: 1px solid #d4d4d4;
+  border: 1px solid rgba(212, 212, 212, 0.5);
   width: 460px;
   margin: 100px auto 0px auto;
   padding: 30px;
-  @include border-radius(8px);
-  @include box-shadow(#{0 1px 8px rgba(0,0,0,.15)});
   h2.logo {
     display: block;
     float: left;
     height: 290px;
-    line-height: 215px;
+    line-height: 265px;
     margin: 0;
     padding: 0;
     min-width: 160px; }
@@ -57,3 +52,12 @@ div.devise-form {
         color: #777777; }
       &.last {
         border-right: none; } } } }
+
+.form-signup {
+  .page-header {
+    margin-bottom: 15px;
+  }
+  p.small {
+    margin-bottom: 20px;
+  }
+}
