--- a/app/assets/stylesheets/components/typographie.css.scss
+++ b/app/assets/stylesheets/components/typographie.css.scss
@@ -9,3 +9,9 @@ h2 {
   letter-spacing: -2px;
   text-transform: uppercase;
 }
+
+p.small {
+  font-size: 11px;
+  line-height: 14px;
+  color: #333;
+}
