--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -3,7 +3,7 @@
   h2.logo
     img(src='https://assetcache.harvestapp.com/uploads/logos/0011/7228/logo_dotgee-screen.jpg?1352812093')
   .form-container
-    = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
+    = simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }, defaults: { input_html: { class: 'm-wrap input-block-level' } }) do |f|
       = f.error_notification
       = f.input :email, autofocus: true, label: 'What email address do you use to sign in?', required: true
       = f.button :submit, 'Submit', class: 'btn-primary'
