--- a/app/assets/stylesheets/components/navbar.css.scss
+++ b/app/assets/stylesheets/components/navbar.css.scss
@@ -67,6 +67,8 @@ header {
 
   .nav > li.account-box > a {
     margin: 0;
-    padding: 6px 15px 6px;
+  }
+  .nav .dropdown-toggle .caret {
+    margin: 13px 0 0 5px;
   }
 }
