--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -33,7 +33,10 @@
     ul.nav.pull-right
       li.dropdown.account-box
         = link_to '#', { class: 'pic dropdown-toggle', 'data-toggle' => 'dropdown' } do
+          = current_user.email
+          '&nbsp;
           = image_tag avatar_url(current_user)
+          b.caret
         ul.dropdown-menu role="menu"
           li
             = link_to edit_user_registration_path do
