--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,10 +1,12 @@
-= link_to root_path, :class => 'brand' do
+= link_to [:admin, :users], :class => 'brand' do
   = image_tag "geoauth.png", :width => "126", :height => "30"
 .nav-collapse.collapse
   - if user_signed_in?
     ul.nav
       li.dropdown
-        = link_to 'Manage Users', '#', data: { toggle: 'dropdown' }, class: 'dropdown-toggle'
+        = link_to '#', data: { toggle: 'dropdown' }, class: 'dropdown-toggle' do
+          |Manage
+          b.caret
         ul.dropdown-menu role="menu"
           li
             = link_to admin_users_path do
@@ -20,7 +22,9 @@
               |  Roles
     ul.nav
       li.dropdown
-        = link_to 'Applications', '#', data: { toggle: 'dropdown' }, class: 'dropdown-toggle'
+        = link_to '#', data: { toggle: 'dropdown' }, class: 'dropdown-toggle' do
+          |Applications
+          b.caret
         ul.dropdown-menu role="menu"
           li
             = link_to '/geoserver/web/' do
