lien geogrph vers admin/users

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,4 +1,4 @@
-= link_to root_path, :class => 'brand' do
+= link_to admin_users_path, :class => 'brand' do
   = image_tag "geoauth.png", :width => "126", :height => "30"
 .nav-collapse.collapse
   - if user_signed_in?
