--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -35,17 +35,17 @@
         = link_to '#', { class: 'pic dropdown-toggle', 'data-toggle' => 'dropdown' } do
           = current_user.email
           '&nbsp;
-          = image_tag avatar_url(current_user)
+          = image_tag avatar_url(current_user), :class => 'gravatar'
           b.caret
         ul.dropdown-menu role="menu"
           li
             = link_to edit_user_registration_path do
               i.icon-user
-              'Edit profile
+               '&nbsp &nbsp Edit profile
           li
             = link_to destroy_user_session_path, :method => :get do
               i.icon-signout
-              'Logout
+               'Logout
   - else
     ul.nav
       li
