--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -15,4 +15,4 @@ table#users.table.table-striped data-source="#{admin_users_url(format: 'json')}"
   tbody
 br
 
-= link_to 'New User', new_admin_user_path, class: 'm-btn blue'
+= link_to 'New User', new_admin_user_path, class: 'btn btn-primary'
