--- a/app/views/admin/groups/index.html.slim
+++ b/app/views/admin/groups/index.html.slim
@@ -1,5 +1,7 @@
 .page-header
-  h1 Listing groups
+  h1 
+    => fa_icon(:users)
+    | groups
 
 table.table.table-striped
   thead
@@ -25,4 +27,4 @@ table.table.table-striped
 
 br
 
-= link_to 'New Group', new_admin_group_path, class: 'm-btn blue'
+= btn_link_to 'New Group', new_admin_group_path
