--- a/app/views/admin/roles/index.html.slim
+++ b/app/views/admin/roles/index.html.slim
@@ -1,23 +1,36 @@
 .page-header
-  h1 Listing roles
+  h1
+    => fa_icon(:"user-times")
+    | Roles
 
-table.table.table-striped
-  thead
-    tr
-      th Name
-      th Description
-      th
+.roles.ilist.col-sm-11
+  .hide_on_mobile
+    .row
+      .col.col1
+        h5
+          | Name
+      .col.col2
+        h5 Created BY
+      .col.col3.members
+        h5 Members
+      .col.col4
+    
+  - @roles.each do |role|
+    .row.cols
+      h4 = link_to role.name, edit_admin_role_path(role)
+      .col.col1
+        p
+          em
+            = role.description 
+      .col.col2
+        = role.link_to_creator
+      .col.col3.members
+        => fa_icon(:user)
+        = role.user_roles.count
+      .col.col4.actions
+        = link_to [ :admin, role ], method: :delete, data: { confirm: 'Are you sure?' }, title: "Delete role #{role.name}" do
+          = fa_icon(:"times-circle-o")
 
-  tbody
-    - @roles.each do |role|
-      tr
-        td= link_to role.name, admin_role_path(role)
-        td= truncate(role.description)
-        td 
-          = link_to 'Edit', edit_admin_role_path(role), class: 'm-btn mini blue-stripe'
-          |  
-          = link_to 'Destroy', [ :admin, role ], method: :delete, data: { confirm: 'Are you sure?' }, class: 'm-btn mini red-stripe'
-
-br
-
-= link_to 'New Role', new_admin_role_path, class: 'm-btn blue'
+.col-lg-4
+.col-lg-12
+  = btn_link_to 'New Role', new_admin_role_path
