--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -30,25 +30,25 @@ html lang="en"
       // /#sidebar-wrapper
 
       #page-content-wrapper
-        -if false
-          // .container-fluid
-          .row
-            nav.navbar.navbar-default.navbar-fixed-top role="navigation"
-              .container-fluid
-                .navbar-header
-                  button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-                  a.navbar-brand href="#"
-                    => glyph(:home)
-                    | Geoauth
-             
-                .navbar-collapse.collapse.navbar-responsive-collapse
-                  ul.nav.navbar-nav
-                    li.active= link_to "Link 1", "#"
-                    li= link_to "Link 2", "#"
-                    li= link_to "Link 3", "#"
+        -if true
+          .container-fluid
+            .row
+              nav.navbar.navbar-default.navbar-fixed-top role="navigation"
+                .container-fluid
+                  .navbar-header
+                    button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
+                      span.icon-bar
+                      span.icon-bar
+                      span.icon-bar
+                    a.navbar-brand href="#"
+                      => glyph(:home)
+                      | Geoauth
+               
+                  .navbar-collapse.collapse.navbar-responsive-collapse
+                    ul.nav.navbar-nav
+                      li.active= link_to "Link 1", "#"
+                      li= link_to "Link 2", "#"
+                      li= link_to "Link 3", "#"
   
         .container-fluid
           .row
