--- a/app/assets/stylesheets/base/sidebar-page.scss
+++ b/app/assets/stylesheets/base/sidebar-page.scss
@@ -163,7 +163,8 @@ $sidebar-border-color: #eaeaea;
     #page-content-wrapper {
         padding: 20px;
         // xymox try
-        padding-top: 40px;
+        // padding-top: 40px;
+        padding-top:0;
         position: relative;
     }
 
