--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -31,24 +31,23 @@ html lang="en"
 
       #page-content-wrapper
         -if true
-          .container-fluid
-            .row
-              nav.navbar.navbar-default.navbar-fixed-top role="navigation"
-                .container-fluid
-                  .navbar-header
-                    button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
-                      span.icon-bar
-                      span.icon-bar
-                      span.icon-bar
-                    a.navbar-brand href="#"
-                      => glyph(:home)
-                      | Geoauth
-               
-                  .navbar-collapse.collapse.navbar-responsive-collapse
-                    ul.nav.navbar-nav
-                      li.active= link_to "Link 1", "#"
-                      li= link_to "Link 2", "#"
-                      li= link_to "Link 3", "#"
+          nav.navbar role="navigation"
+            .container-fluid
+              .navbar-header
+                button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
+                  span.icon-bar
+                  span.icon-bar
+                  span.icon-bar
+           
+              .navbar-collapse.collapse.navbar-responsive-collapse
+                ul.nav.navbar-nav.navbar-right
+                  li
+                    - if user_signed_in?
+                      = link_to destroy_user_session_path, method: :delete do
+                        = gravatar_image_tag(current_user.email, alt: current_user.email, gravatar: { size: 36 })
+                        = current_user.email
+                    - else
+                      = link_to 'Login', new_user_session_path
   
         .container-fluid
           .row
