--- a/app/views/layouts/login.html.slim
+++ b/app/views/layouts/login.html.slim
@@ -6,6 +6,7 @@ html
     meta content=(content_for?(:description) ? yield(:description) : "Geoauth") name="description"
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Lato:100,900"
     = stylesheet_link_tag "application", :media => "all"
+    = stylesheet_link_tag "base/form-signin", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
     = yield(:head)
