--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -27,10 +27,9 @@ html lang="en"
       }
 
   body.login
-    = render partial: 'layouts/devise_nav_bar'
-    .parent.valign.halign
+    .parent.valign
       .container
-        .row.halign
+        .row.valign
           .col-sm-8.col-md-4
             = yield
     footer.footer
