--- a/app/views/layouts/_devise_nav_bar.html.slim
+++ b/app/views/layouts/_devise_nav_bar.html.slim
@@ -6,10 +6,10 @@ nav.navbar role="navigation"
     .navbar-collapse.collapse.navbar-responsive-collapse
       ul.nav.navbar-nav.navbar-right
         li
-          = link_to 'Geoserver', '/geoserver'
+          = link_to 'Geoserver', '/geoserver/'
         li
-          = link_to 'Geonetwork', '/geonetwork'
+          = link_to 'Geonetwork', '/geonetwork/'
         li
-          = link_to 'Geocms', '/geocms'
+          = link_to 'Geocms', '/geocms/'
         li.signup
           = link_to 'Sign up', new_registration_path(resource_name), class: 'btn btn-default btn-transparent'
