--- a/app/views/admin/roles/_list.html.slim
+++ b/app/views/admin/roles/_list.html.slim
@@ -1,28 +1,26 @@
-.roles.ilist.col-sm-11
-  .hide_on_mobile
-    .row
-      .col.col1
-        h5
-          | Name
-      .col.col2
-        h5 Created BY
-      .col.col3.members
-        h5 Members
-      .col.col4
+table.roles.table.table-striped
+  thead
+    tr.hide_on_mobile
+      th Name
+      th Created BY
+      th Members
+      th
     
-  - @roles.each do |role|
-    .row.cols
-      h4 = link_to role.name, edit_admin_role_path(role)
-      .col.col1
-        p
-          em
-            = role.description 
-      .col.col2
-        = role.link_to_creator
-      .col.col3.members
-        => fa_icon(:user)
-        = role.user_roles.count
-      .col.col4.actions
-        = link_to [ :admin, role ], method: :delete, data: { confirm: 'Are you sure?' }, title: "Delete role #{role.name}" do
-          = fa_icon(:"times-circle-o")
+    tbody
+      - @roles.each do |role|
+        tr
+          td
+            = link_to role.name, edit_admin_role_path(role)
+            br/
+            p
+              em
+                = role.description 
+          td
+            = role.link_to_creator
+          td.members
+            => fa_icon(:user)
+            = role.user_roles.count
+          td.actions
+            = link_to [ :admin, role ], method: :delete, data: { confirm: 'Are you sure?' }, title: "Delete role #{role.name}" do
+              = fa_icon(:"times-circle-o")
 
