--- a/app/assets/stylesheets/base/sidebar-page.scss
+++ b/app/assets/stylesheets/base/sidebar-page.scss
@@ -161,10 +161,9 @@ $sidebar-border-color: #eaeaea;
     }
 
     #page-content-wrapper {
-        padding: 20px;
+        padding: 46px 20px 20px 20px;
         // xymox try
-        // padding-top: 40px;
-        padding-top:0;
+        // padding-top:0;
         position: relative;
     }
 
