--- a/app/views/admin/shared/_users_list.html.slim
+++ b/app/views/admin/shared/_users_list.html.slim
@@ -18,7 +18,7 @@ table#users_list.table.table-stripped
         td
           = link_to user.email, edit_admin_user_path(user)
         td
-          = user.full_name
+          = user.name
         td
           = link_to 'Edit', edit_admin_user_path(user), class: 'm-btn mini blue-stripe'
           |  
