--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -31,7 +31,7 @@ html lang="en"
 
       #page-content-wrapper
         -if true
-          nav.navbar role="navigation"
+          nav.navbar.navbar-default.navbar-fixed-top.mynav role="navigation"
             .container-fluid
               .navbar-header
                 button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
