--- a/app/views/shared/_users_list.html.slim
+++ b/app/views/shared/_users_list.html.slim
@@ -18,6 +18,6 @@ table.table
         td
           = user.email
         td
-          = user.full_name
+          = user.name
         td.actions
           |  
