Integrate omniauth and shibboleth

--- a/app/assets/stylesheets/framework_and_overrides.scss
+++ b/app/assets/stylesheets/framework_and_overrides.scss
@@ -124,8 +124,10 @@ h3.logo {
   box-shadow: none;
 }
 
-ul.nav > li {
-  padding: 20px 15px;
-}
-body {
-}
+//
+// for admin but incompatible with frontend
+//
+//ul.nav > li {
+//  padding: 20px 15px;
+//}
+
