--- a/app/assets/stylesheets/base/form-signin.scss
+++ b/app/assets/stylesheets/base/form-signin.scss
@@ -1,3 +1,15 @@
+$footer-height: 60px;
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  // Margin bottom by footer height + space before footer
+  margin-bottom: 40px + $footer-height;
+}
+
 #login-wrapper {
   display: table;
   width: 100%;
@@ -110,9 +122,9 @@ body.login {
 
   .footer {
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
-    height: 60px;
+    height: $footer-height;
     border: none;
     background-color: #2B74A7;
     color: #fff;
@@ -135,21 +147,14 @@ body.login {
   justify-content: center;
 }
 
-.nav > li.signup {
-  margin-left: 20px;
-  padding: 20px 0px;
-  & > a {
-    padding: 10px 15px
-  }
-}
-
+// .nav > li.xsignup {
 .navbar-brand {
   // logo is 30px height
-  padding: 20px 15px;
+  padding: 10px 15px;
 }
 
 .nav > li {
-  padding: 30px 15px;
+  padding: 15px 15px;
   & > a {
     padding: 0px 0px;
     text-transform: uppercase;
@@ -164,6 +169,16 @@ body.login {
     }
   }
 }
+// padding different juste pour garder l'effet border-bottom dotted sur les liens
+//
+.nav > li.btn {
+  margin-left: 20px;
+  padding: 5px 0px;
+  & > a {
+    padding: 10px 15px
+  }
+}
+
 
 .btn-transparent {
   background-color: transparent;
