--- a/app/views/layouts/_devise_nav_bar.html.slim
+++ b/app/views/layouts/_devise_nav_bar.html.slim
@@ -13,5 +13,9 @@ nav.navbar role="navigation"
           = link_to 'Geonetwork', '/geonetwork/'
         li
           = link_to 'Geocms', '/geocms/'
-        li.signup
-          = link_to 'Sign up', new_registration_path(resource_name), class: 'btn btn-default btn-transparent'
+        - if !user_signed_in?
+          li.btn.signup
+            = link_to 'Sign up', new_registration_path(resource_name), class: 'btn btn-default btn-transparent'
+        - else
+          li.btn.logout
+            = link_to 'Logout', destroy_session_path(resource_name), method: :get, class: 'btn btn-default btn-transparent'
